support TooltipPositioner in ScreenTooltipFactory